[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oppertune"
version = "0.1.0"
authors = [
    { name = "Anush Kini", email = "t-anushkini@microsoft.com" },
    { name = "Karan Tandon", email = "karantandon@microsoft.com" },
    { name = "Mayukh Das", email = "mayukhdas@microsoft.com" },
]
description = "Python implementation of the OPPerTune algorithms."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["oppertune"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "gymnasium>=0.26",
    "joblib>=1.3",
    "numpy>=1.19",
    "scikit-optimize>=0.9",
    "torch>=1.13",
    "vowpalwabbit>=9.4.0",
    "hyperopt>=0.2.7",
]

[project.urls]
Homepage = "https://aka.ms/OPPerTune"
Code = "https://github.com/microsoft/OPPerTune"

[project.optional-dependencies]
dev = ["black>=23.1", "isort>=5.11"]

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 120
py_version = 37
